<resources>
    <string name="app_name">LostFound</string>
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Items</string>
    <string name="text_label_3">Persons</string>
    <string name="text_label_4">Chat</string>
    <string name="text_label_5">Profile</string>

    <string name="FAB_text">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_item">add_Item</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO your Firebase Realtime Database URL-->
    <string name="database_url">https://looklost-25d72d20-default-rtdb.firebaseio.com/</string>
</resources>