<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_1"
        android:enabled="true"
        android:icon="@drawable/homeicon"
        android:title="@string/text_label_1"/>
    <item
        android:id="@+id/item_2"
        android:enabled="true"
        android:icon="@drawable/item_icon"
        android:title="@string/text_label_2"/>
    <item
        android:id="@+id/item_3"
        android:enabled="true"
        android:icon="@drawable/person_icon2"
        android:title="@string/text_label_3"/>
    <item
        android:id="@+id/item_4"
        android:enabled="true"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/text_label_4"/>
    <item
        android:id="@+id/item_5"
        android:enabled="true"
        android:icon="@drawable/person_icon"
        android:title="@string/text_label_4"/>
</menu>