<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primary"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="24dp"
            android:paddingTop="40dp">

            <RelativeLayout
                android:id="@+id/homeusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hi,"
                        android:textColor="@color/md_theme_light_onPrimary"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/home_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="USER"
                        android:textColor="@color/md_theme_light_onPrimary"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_imageview"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/male_avatar"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="2dp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/homeusername"
                android:layout_marginTop="12dp"
                android:autoLink="web"
                android:text="Stuck on a lost and found issue? Click Here"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="14sp" />

        </RelativeLayout>

        <!-- Content -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@drawable/background_container2"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                style="?attr/tabSecondaryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_container2"
                app:tabTextAppearance="@style/TabTextAppearance">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_2" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_3" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:contentDescription="@string/FAB_text"
        android:text="@string/FAB_text"
        android:textStyle="bold"
        app:icon="@drawable/baseline_add_24" />

</FrameLayout>